[gd_scene load_steps=9 format=2]

[ext_resource path="res://NPCs/Animals/Animal.gd" type="Script" id=1]
[ext_resource path="res://NPCs/Animals/bigSheep.wav" type="AudioStream" id=2]
[ext_resource path="res://NPCs/Animals/SheepParts.png" type="Texture" id=3]
[ext_resource path="res://Levels/Scenery/BloodSplotch.png" type="Texture" id=4]
[ext_resource path="res://Projectiles/Arrow/arrow.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.464, 8.71214 )

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyParts/LegFront1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 22.5, 0.0, -22.5, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyParts/LegFront2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 5.0, -20.0, 5.0, 20.0, 5.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyParts/LegBack1:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0, 0.0, -5.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyParts/LegBack2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -5.0, 0.0, 30.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyParts/Head:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -4.0, 0.0, 3.0, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23.7159, 13.9338 )

[node name="Sheep" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.3967, 21.6485 )
shape = SubResource( 1 )

[node name="BehaviourChangeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -22.0

[node name="NoiseTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="BodyParts" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="Body" type="Sprite" parent="BodyParts"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 84.5, 0.25, 112, 65.75 )

[node name="LegFront1" type="Sprite" parent="BodyParts"]
position = Vector2( -31.2374, 16.3349 )
texture = ExtResource( 3 )
offset = Vector2( -2.11969, 22.5817 )
region_enabled = true
region_rect = Rect2( 39.5, 1, 35, 66.5 )

[node name="LegFront2" type="Sprite" parent="BodyParts"]
position = Vector2( -31.2374, 16.3349 )
rotation = 0.0872665
texture = ExtResource( 3 )
offset = Vector2( -2.11969, 22.5817 )
region_enabled = true
region_rect = Rect2( 39.5, 1, 35, 66.5 )

[node name="LegBack1" type="Sprite" parent="BodyParts"]
position = Vector2( 33.1603, 3.36273 )
texture = ExtResource( 3 )
offset = Vector2( 5.29298, 25.8247 )
region_enabled = true
region_rect = Rect2( -6.5, -3.25, 43.5, 66.25 )

[node name="LegBack2" type="Sprite" parent="BodyParts"]
position = Vector2( 33.1603, 3.36273 )
texture = ExtResource( 3 )
offset = Vector2( 5.29298, 25.8247 )
region_enabled = true
region_rect = Rect2( -6.5, -3.25, 43.5, 66.25 )

[node name="Head" type="Sprite" parent="BodyParts"]
position = Vector2( -33.6664, -7.33498 )
texture = ExtResource( 3 )
offset = Vector2( -10.2104, -13.4409 )
region_enabled = true
region_rect = Rect2( 200.727, -1.59, 61, 62 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/walk = SubResource( 2 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 56

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0.751038, -1.50207 )
shape = SubResource( 3 )

[node name="DeadBody" type="Node2D" parent="."]
visible = false
position = Vector2( 9.10083, 17.6329 )
scale = Vector2( 0.5, 0.5 )

[node name="Body" type="Sprite" parent="DeadBody"]
rotation = -0.296706
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 87, 5, 113, 61 )

[node name="BloodSplotchSprite" type="Sprite" parent="DeadBody"]
self_modulate = Color( 1, 1, 1, 0.964706 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Head" type="Sprite" parent="DeadBody"]
position = Vector2( -39.0037, 4.75656 )
rotation = 2.18166
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 199, 6, 67, 59 )

[node name="arrow" type="Sprite" parent="DeadBody"]
position = Vector2( -32.6422, -23.1323 )
rotation = -0.666716
texture = ExtResource( 5 )

[connection signal="timeout" from="BehaviourChangeTimer" to="." method="_on_BehaviourChangeTimer_timeout"]
[connection signal="timeout" from="NoiseTimer" to="." method="_on_NoiseTimer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
